# AM2S

./: .gitignore  Pipfile  README.md  config.example.toml  consoles.toml  pyproject.toml  requirements.txt
AM2S/: __main__.py
AM2S/api/: InfoRequester.py  Requester.py  RequesterEndpoint.py
AM2S/builders/: GameInfoBuilder.py  GameMediaBuilder.py  HashesBuilder.py  IdentityBuilder.py  RomFileBuilder.py
AM2S/console/: ConsoleDatabase.py  ConsoleInfo.py  ConsoleInfoBuilder.py
AM2S/data/: ConsoleInfo.py  GameInfo.py  GameMedia.py  Identity.py  RomFile.py
AM2S/display/: DisplayTools.py  TerminalColor.py
AM2S/enums/: BoxSizes.py  ScreenscraperEndpoint.py
AM2S/errors/: ImageError.py  NodeError.py  ProcedureError.py  RomError.py
AM2S/hash/: HashAlgorithm.py  Hashes.py  HashesBuilder.py
AM2S/identity/: Credentials.py  Identity.py  IdentityBuilder.py
AM2S/info/: GameInfo.py  GameInfoBuilder.py  GameInfoFormatter.py
AM2S/interfaces/: SCRequester.py
AM2S/media/: GameMedia.py  GameMediaBuilder.py  GameMediaFetcher.py  MaskApplier.py
AM2S/misc/: ArgumentsService.py  NodeTools.py  TerminalColor.py  TomlLoader.py
AM2S/presets/: Console.py  ScreenscraperEndpoint.py
AM2S/procedure/: DefaultProcedure.py  DoomFileData.py  DoomFileDataBuilder.py  DoomProcedure.py  Procedure.py  ProcedureStore.py  ZipProcedure.py
AM2S/rom/: RomFile.py  RomFileBuilder.py
AM2S/romset/: FolderAnalyzer.py  RomSet.py
AM2S/services/: ArgumentsService.py  ConfigLoader.py  DisplayTools.py  GameInfoFormatter.py  GameMediaFetcher.py  GameMediaGetter.py  InfoRequester.py  (+2 more)
(+11 files in other folders)
